force-app/main/default/objects/Department__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building A</fullName>
            </value>
            <value>
                <fullName>Building B</fullName>
            </value>
            <value>
                <fullName>Building C</fullName>
            </value>
            <value>
                <fullName>Building D</fullName>
            </value>
            <value>
                <fullName>Building E</fullName>
            </value>
            <value>
                <fullName>Building F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>