force-app/main/default/objects/Department__c/fields/Shifts__c.field-meta.xml
<CustomField>
    <fullName>Shifts__c</fullName>
    <label>Shifts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>